fixed about me to work on mobile

--- a/assets/style.css
+++ b/assets/style.css
@@ -32,7 +32,7 @@ font-weight: bold;
 .navbar ul li a{
   text-decoration: none;
   color: white;
-  padding: 8px 25px;
+  padding: 0px 7px;
   transition: all .5s ease;
 }
 .navbar ul li a:hover{
@@ -105,11 +105,11 @@ opacity: .8;
   margin-bottom: 0px;
 }
 #pic{
-  display: flex;
+  flex-direction: row;
 }
 #pic img{
-  width: 575px;
-  height: 400px;
+  width: 300px;
+  height: 300px;
 }
 #intro{
   display: flex;
@@ -221,3 +221,9 @@ padding: 20px;
   box-shadow: 0 0 10px white;
 
 }
+ @media (min-width: 640px) {
+  #pic img{
+    width: 575px;
+    height: 400px;
+  }
+ }
